# OpenFHEPy

./: .gitignore  CMakeLists.txt  Readme.md
NeuralOFHE/: CMakeLists.txt
NeuralOFHE/include/NeuralOFHE/Operators/: Operator.h  PadOperator.h
NeuralOFHE/src/: GeneralLinearOperator.cpp  LinTools.cpp  LinTools.h  MatrixFormatting.h  Operator.cpp  PadOperator.cpp
example_code/: cryptonet_inference.py
neuralpy/: CMakeLists.txt  neuralpy.cpp
neuralpy/include/: ModuleDefinitions.h  OpenFHEPrerequisites.h  PythonCiphertext.h  PythonContext.h  PythonKeys.h  WrapperClasses.h  WrapperFunctions.h
